chore: update User struct, add util to handle api responses
