# docs/swagger.json
@@ -26,10 +26,10 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "ok",
+                    "201": {
+                        "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/responses.UserResponse"
+                            "$ref": "#/definitions/util.Responses"
                         }
                     }
                 }
@@ -44,11 +44,11 @@
                 "summary": "Get a list of users",
                 "responses": {
                     "200": {
-                        "description": "ok",
+                        "description": "OK",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/responses.UserResponse"
+                                "$ref": "#/definitions/util.Responses"
                             }
                         }
                     }
@@ -60,36 +60,34 @@
         "models.User": {
             "type": "object",
             "required": [
+                "age",
                 "location",
-                "name",
-                "title"
+                "name"
             ],
             "properties": {
-                "id": {
-                    "type": "string"
+                "age": {
+                    "type": "integer"
                 },
                 "location": {
                     "type": "string"
                 },
                 "name": {
-                    "type": "string"
-                },
-                "title": {
+                    "description": "Id       primitive.ObjectID `json:\"id,omitempty\"`",
                     "type": "string"
                 }
             }
         },
-        "responses.UserResponse": {
+        "util.Responses": {
             "type": "object",
             "properties": {
-                "data": {
-                    "type": "object",
-                    "additionalProperties": true
-                },
+                "data": {},
                 "message": {
                     "type": "string"
                 },
-                "status": {
+                "method": {
+                    "type": "string"
+                },
+                "statusCode": {
                     "type": "integer"
                 }
             }
